# EJERCICIOS_EVALUABLES_SSDD

./: .gitignore  CMakeLists.txt  README.md  app-cliente-pesao  app-cliente-rpc  build.sh  makefile  servidor  servidor-rpc  test_easy_stress.sh  test_hard_stress.sh  test_pesao.sh
src/: claves.h  cliente2.c  deletequeue.c  headers.h  proxy-mq.c  test.c  test.sh  test2.c
src/client-side/: app-cliente-inf.c  app-cliente-pesao.c  app-cliente.c  app-cliente2.c  app-cliente3.c  proxy-mq.c  proxy-rpc.c  proxy-sock.c  prueba-cliente.c
src/common/: claves_rpc.h  claves_rpc.x  claves_rpc_clnt.c  claves_rpc_svc.c  claves_rpc_xdr.c  socket_message.c
src/server-side/: claves.c  database.db  free_xdr.c  servidor-mq.c  servidor-rpc.c  servidor-sock.c  treat_sql.c  treat_sql.cpp  treat_sql.h
src/structs/: claves.h  socket_message.h  struct.h
